--- a/css/styles.css
+++ b/css/styles.css
@@ -308,3 +308,31 @@ li {
   padding: 1em;
   text-align: left;
 }
+
+/* ANIMACION DE MENU DE NAVEGACION EN EL LOGO */
+
+.btn-outline-success {
+  animation-duration: 2s;
+  animation-name: aparecer;
+  animation-iteration-count: infinite;
+}
+
+@keyframes aparecer {
+  0% {
+    opacity: 0%;
+    color: white;
+  }
+  100% {
+    opacity: 1;
+    color: #b70e21;
+  }
+}
+
+/* MEJORAR CARRUSEL EN MODO MOBILE */
+.carousel-inner > .carousel-item > img {
+  position: absolute;
+  top: 0;
+  left: 0;
+  min-width: 100%;
+  height: 500px;
+}
