--- a/css/styles.css
+++ b/css/styles.css
@@ -1,11 +1,11 @@
 @import url("https://fonts.googleapis.com/css2?family=Montserrat&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Roboto+Condensed&display=swap");
-
 /* font-family: 'Roboto Condensed', sans-serif; */
 body {
   font-family: "Montserrat";
   overflow-x: hidden;
 }
+
 /* ============== */
 /* BOTON WHATSAPP */
 /* ============== */
@@ -19,9 +19,10 @@ body {
   color: #fff;
   text-align: center;
   font-size: 30px;
-  box-shadow: 0px 1px 10px rgba(0, 0green, 0blue, 0.3);
+  box-shadow: 0px 1px 10px rgba(0, 0, 0, 0.3);
   /* z-index: 100; */
 }
+
 .btn-wsp:hover {
   color: #2903fd;
 }
@@ -29,7 +30,6 @@ body {
 /* ============== */
 /* MENU */
 /* ============== */
-
 #menu a {
   font-size: 18px;
   font-weight: bold;
@@ -40,6 +40,7 @@ body {
   font-size: 18px;
   font-weight: bold;
 }
+
 /* ============== */
 /* SLIDER DE IMAGENES */
 /* ============== */
@@ -58,31 +59,8 @@ body {
 }
 
 /* ============== */
-/* QUERIES PANTALLA PEQUEÑAS */
-/* ============== */
-/* 
-@media (max-width: 768px) {
-  #principal {
-    width: 90% !important;
-  }
-  .notas-rapidas {
-    width: 100% !important;
-    text-align: center;
-  }
-} */
-
-a:visited {
-  color: forestgreen;
-}
-
-#mapaHonda {
-  margin: 5px;
-}
-
-/* ============== */
 /* PIE DE PAGINA */
 /* ============== */
-
 li {
   list-style: none;
 }
@@ -107,6 +85,7 @@ li {
   justify-content: space-evenly;
   flex-wrap: wrap;
 }
+
 .tarjeta {
   width: 300px;
   height: 600px;
@@ -141,6 +120,7 @@ li {
   font-size: 30px;
   margin: 10px 0;
 }
+
 .tarjeta-titulo {
   font-size: 25px;
   margin: 15px 0;
@@ -200,7 +180,6 @@ li {
 }
 
 /* PARA EL FORMULARIO DE CONTACTO */
-
 .body-form {
   background-color: black;
   color: white;
@@ -227,6 +206,7 @@ li {
 .contacto-agrupar {
   box-shadow: 0 0 20px 0 rgba(255, 255, 255, 0.3);
 }
+
 .contacto-agrupar > * {
   padding: 1em;
 }
@@ -267,6 +247,7 @@ li {
   transition: background-color 1s ease-out;
   outline: 0;
 }
+
 .contacto-info {
   background: #000;
 }
@@ -288,7 +269,6 @@ li {
 }
 
 /* FORMULARIO DE CONTACTO QUERIES */
-
 @media (min-width: 700px) {
   body {
     padding: 0.4rem;
@@ -301,7 +281,6 @@ li {
     padding: 2em;
   }
 }
-
 .contacto-info h4,
 .contacto-info ul,
 .contacto-info p {
@@ -309,8 +288,15 @@ li {
   text-align: left;
 }
 
-/* ANIMACION DE MENU DE NAVEGACION EN EL LOGO */
+a:visited {
+  color: forestgreen;
+}
 
+#mapaHonda {
+  margin: 5px;
+}
+
+/* ANIMACION DE MENU DE NAVEGACION EN EL LOGO */
 .btn-outline-success {
   animation-duration: 2s;
   animation-name: aparecer;
@@ -327,7 +313,6 @@ li {
     color: #b70e21;
   }
 }
-
 /* MEJORAR CARRUSEL EN MODO MOBILE */
 .carousel-inner > .carousel-item > img {
   position: absolute;
@@ -336,3 +321,5 @@ li {
   min-width: 100%;
   height: 500px;
 }
+
+/*# sourceMappingURL=styles.css.map */
