--- a/css/styles.css
+++ b/css/styles.css
@@ -289,7 +289,7 @@ li {
 }
 
 a:visited {
-  color: forestgreen;
+  color: #fff;
 }
 
 #mapaHonda {
@@ -310,7 +310,7 @@ a:visited {
   }
   100% {
     opacity: 1;
-    color: #b70e21;
+    color: blue;
   }
 }
 /* MEJORAR CARRUSEL EN MODO MOBILE */
